# surface-code-simulator

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quick_threshold.py
notebooks/: 01_threshold_and_heatmaps.ipynb
src/surfacecode/: __init__.py  circuits.py  cli.py  decoding.py  experiment.py  metrics.py  sampling.py  threshold.py  types.py
src/surfacecode/viz/: __init__.py  heatmaps.py  plots.py
tests/: test_metrics.py  test_pipeline.py  test_types.py
